--- a/main.tex
+++ b/main.tex
@@ -26,18 +26,18 @@
 \renewcommand{\checkmark}{\ding{51}}
 	
 \includepaper{chapters/Schwarz}
-\includepaper{chapters/Cisneros}
-\includepaper{chapters/Sereikaite}
-\includepaper{chapters/Irani}
-\includepaper{chapters/Pico}
-\includepaper{chapters/LeBruyn}
-\includepaper{chapters/Hall} 
-\includepaper{chapters/Despic}
-\includepaper{chapters/Borik-Espinal}
-\includepaper{chapters/Williams} 
-\includepaper{chapters/de-Sa}
-\includepaper{chapters/Coppock-Strand}
-\includepaper{chapters/Etxeberria}
+% \includepaper{chapters/Cisneros}
+% \includepaper{chapters/Sereikaite}
+% \includepaper{chapters/Irani}
+% \includepaper{chapters/Pico}
+% \includepaper{chapters/LeBruyn}
+% \includepaper{chapters/Hall} 
+% \includepaper{chapters/Despic}
+% \includepaper{chapters/Borik-Espinal}
+% \includepaper{chapters/Williams} 
+% \includepaper{chapters/de-Sa}
+% \includepaper{chapters/Coppock-Strand}
+% \includepaper{chapters/Etxeberria}
 % 
 % \sloppy
 \input{backmatter.tex}
