Updates from Overleaf

--- a/localcommands.tex
+++ b/localcommands.tex
@@ -148,4 +148,8 @@
 	
 	\newcommand{\exsource}[1]{\hfill#1}
 	
-	
+% Extra commands for shortcuts
+
+\newcommand{\fts}[1]{\footnotesize #1}
+
+\newcommand{\smc}[1]{\textsc{\MakeTextLowercase{#1}}}	
