--- a/localhyphenation.tex
+++ b/localhyphenation.tex
@@ -20,5 +20,9 @@ Matthew-son
 where-as
 def-i-nite-ness
 Perelts-vaig
-Boš-ko-vić 
+Boš-ko-vić
+Sy-bes-ma
+Cin-que
+Mön-chen-glad-bach
+Prinz-horn
 }
