--- a/localpackages.tex
+++ b/localpackages.tex
@@ -5,7 +5,7 @@
 \usepackage{multicol} 
 
 % Extra
-\usepackage{multicol}
+%\usepackage{multicol}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%                                              %%%
@@ -59,6 +59,7 @@
 % Irani
 %\usepackage{amsmath}
 %\usepackage[normalem]{ulem}
+\usepackage{textcase}
 
 % Le Bruyn
 \usepackage{enumerate}
@@ -75,7 +76,7 @@
 %\usepackage{qtree}
 %\usepackage{tikz}
 
-%TODO Triggers incompatibility with the commands in Coppock-Strand:
+%TODO Triggers incompatibility with commands in Coppock-Strand:
 
 \usepackage{tikz-qtree}
 \usepackage{tikz-qtree-compat}
