--- a/localseealso.tex
+++ b/localseealso.tex
@@ -1,10 +1,9 @@
-%\issa{anaphora}{anaphoric definites, anaphoric reference, anaphoricity, donkey anaphora, generic reference, kind reference, property anaphora, speaker anaphora}
 \issa{associative anaphora}{bridging}
 \issa{anaphor}{anaphora}
-\issa{bare singulars}{Bare Institutional Singulars}
-\is{BIS|see {Bare Institutional Singulars}}
+\issa{articles}{definite articles, indefinite articles, specific articles, strong definite articles, weak definite articles}
+\issa{bare singulars}{bare institutional singulars}
+\is{BIS|see {bare institutional singulars}}
 \issa{bridging}{part-whole relationship, product-producer relationship}
-%\issa{classifiers}{classifier phrases, lexical classifiers, noun classifiers, numeral classifier languages}
 \is{classifier languages|see {numeral classifier languages}}
 \is{ClP|see {classifier phrases}}
 \is{countable nouns|see {count nouns}}
@@ -24,7 +23,6 @@
 \issa{genericity}{D-genericity}
 \is{GQ|see {generalized quantifiers}}
 \is{HMC|see {Head Movement Constraint}}
-%\issa{kinds}{definite kinds, Derived Kind Predication, kind properties, kind reference, modified kinds, subkinds, well-established kind restriction}
 \is{L2 acquisition|see {second language acquisition}}
 \is{LBE|see {Left Branch Extraction}}
 \is{LF|see {logical form}}
@@ -38,13 +36,10 @@
 \is{Q|see {quantificational determiners, quantifiers}}
 \issa{quantifiers}{quantificational determiners}
 \is{SLA|see {second language acquisition}}
-%\issa{superlatives}{absolute readings of superlatives, adnominal superlatives, adverbial superlatives, proportional readings of superlatives, quality superlatives, quantity superlatives, relative readings of superlatives}
-\is{UDP|see {Universal DP (Aproach)}}
-%\issa{uniqueness}{global uniqueness, informational uniqueness, pragmatic uniqueness, semantic uniqueness, situational uniqueness, uniqueness scale}
+\is{UDP|see {Universal DP (Approach)}}
 \il{ASL|see {American Sign Language}}
-\il{LIBRAS|see {Brazilian Sign Language}}
+\il{Libras|see {Brazilian Sign Language}}
 \il{MC|see {Mandarin}}
 \il{WA|see {Weining Ahmao}}
 \il{WW|see {Wenzhou Wu}}
 \ilsa{French-based creoles}{Haitian Creole, Mauritian Creole}
-%\ilsa{some language with pages}{some other lect also of interest}
