--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[output=book,modfonts,nonflat,collection,collectionchapter
 ,colorlinks, citecolor=brown
-% ,draft,draftmode
+,draft,draftmode
 		  ]{langsci/langscibook}                              
 \input{localmetadata.tex}
 \input{localpackages.tex}
@@ -14,9 +14,9 @@
 
 \currentpdfbookmark{Contents}{name} % adds a PDF bookmark
 \tableofcontents
-% \include{chapters/preface}
 % \include{chapters/acknowledgments}
-\lsCollectionPaperFrontmatterMode % Enter the Frontmatter Mode. 
+\lsCollectionPaperFrontmatterMode % Enter the Frontmatter Mode.
+\setcounter{chapter}{-1}
 \includepaper{chapters/prefaceEd}
 \lsCollectionPaperMainmatterMode % Leave the Frontmatter Mode 
 \setcounter{chapter}{0} % Reset the chapter counter so that preceeding prefaces are not counted
@@ -25,19 +25,19 @@
 
 \renewcommand{\checkmark}{\ding{51}}
 	
-\includepaper{chapters/Schwarz}
-% \includepaper{chapters/Cisneros}
-% \includepaper{chapters/Sereikaite}
-% \includepaper{chapters/Irani}
-% \includepaper{chapters/Pico}
-% \includepaper{chapters/LeBruyn}
-% \includepaper{chapters/Hall} 
-% \includepaper{chapters/Despic}
-% \includepaper{chapters/Borik-Espinal}
-% \includepaper{chapters/Williams} 
-% \includepaper{chapters/de-Sa}
-% \includepaper{chapters/Coppock-Strand}
-% \includepaper{chapters/Etxeberria}
+ %\includepaper{chapters/Schwarz}
+ %\includepaper{chapters/Cisneros}
+ %\includepaper{chapters/Sereikaite}
+ %\includepaper{chapters/Irani}
+ %\includepaper{chapters/Pico}
+ %\includepaper{chapters/LeBruyn}
+ %\includepaper{chapters/Hall} 
+ %\includepaper{chapters/Despic}
+ %\includepaper{chapters/Borik-Espinal}
+ %\includepaper{chapters/Williams} 
+ % \includepaper{chapters/de-Sa}
+ %\includepaper{chapters/Coppock-Strand}
+ %\includepaper{chapters/Etxeberria}
 % 
 % \sloppy
 \input{backmatter.tex}
