fixed some minor issues

--- a/langsci/seriesinfo/silp-info.tex
+++ b/langsci/seriesinfo/silp-info.tex
@@ -24,4 +24,5 @@ In this series:
 \item Mücke, Doris. Dynamische Modellierung von Artikulation und prosodischer Struktur: Eine Einführung in die Artikulatorische Phonologie.
 \item Bergmann, Pia. Morphologisch komplexe Wörter im Deutschen: Prosodische Struktur und phonetische Realisierung. 
 \item Feldhausen, Ingo \& Fliessbach, Jan \& Maria del Mar Vanrell. Methods in prosody: A Romance language perspective.
+\item Tilsen, Sam. Syntax with oscillators and energy levels.
 \end{enumerate}
