--- a/main.tex
+++ b/main.tex
@@ -1,6 +1,6 @@
 \documentclass[output=book,modfonts,nonflat,collection,collectionchapter
 ,colorlinks, citecolor=brown
-,draft,draftmode
+% ,draft,draftmode
 		  ]{langsci/langscibook}                              
 \input{localmetadata.tex}
 \input{localpackages.tex}
@@ -25,21 +25,20 @@
 
 \renewcommand{\checkmark}{\ding{51}}
 	
- %\includepaper{chapters/Schwarz}
- %\includepaper{chapters/Cisneros}
- %\includepaper{chapters/Sereikaite}
- %\includepaper{chapters/Irani}
- %\includepaper{chapters/Pico}
- %\includepaper{chapters/LeBruyn}
- %\includepaper{chapters/Hall} 
- %\includepaper{chapters/Despic}
- %\includepaper{chapters/Borik-Espinal}
- %\includepaper{chapters/Williams} 
- % \includepaper{chapters/de-Sa}
- %\includepaper{chapters/Coppock-Strand}
- %\includepaper{chapters/Etxeberria}
-% 
-% \sloppy
+%  \includepaper{chapters/Schwarz}
+%  \includepaper{chapters/Cisneros}
+%  \includepaper{chapters/Sereikaite}
+%  \includepaper{chapters/Irani}
+%  \includepaper{chapters/Pico}
+%  \includepaper{chapters/LeBruyn}
+%  \includepaper{chapters/Hall} 
+%  \includepaper{chapters/Despic}
+%  \includepaper{chapters/Borik-Espinal}
+%  \includepaper{chapters/Williams} 
+%  \includepaper{chapters/de-Sa}
+ \includepaper{chapters/Coppock-Strand}
+%  \includepaper{chapters/Etxeberria}
+
 \input{backmatter.tex}
 \input{localseealso.tex}
 
