--- a/backmatter.tex
+++ b/backmatter.tex
@@ -1,4 +1,4 @@
-\backmatter 
+\backmatter{\sloppy
 \phantomsection%this allows hyperlink in ToC to work
 \addcontentsline{toc}{chapter}{Indexes} 
 
@@ -17,5 +17,5 @@
 \phantomsection%this allows hyperlink in ToC to work
 \addcontentsline{toc}{section}{Subject index}
 \ohead{Subject index} 
-\printindex[sbj]
+\printindex[sbj]}
 \cleardoublepage
