--- a/langsci/styles/langsci-optional.sty
+++ b/langsci/styles/langsci-optional.sty
@@ -227,19 +227,34 @@
   \settowidth{\LSPTmp}{#1}%
   % several boxes are need to assure that words with ascending and descending letters are underlined at the same 
   % level, leading to the impression of a continuous stroke
-  \parbox[t]{\LSPTmp}{ %restrict first box to the length of first argument
+  \parbox[t]{\LSPTmp}{%restrict first box to the length of first argument
       \settowidth{\fulllength}{\parbox{\LSPTmp}{~}\parbox{#2mm}{~}} %inner box is larger than outerbox, so underlining will extend beyond length of outer box
       %             align parbox to bottom
       %              |           mbox to prevent hyphenation
-      \uline{\parbox[b]{\fulllength}{\mbox{#1}}}
-    }
+      \uline{\parbox[b]{\fulllength}{\mbox{#1}}}%
+    }%
 }
 
 \newcommand{\ule}[1]{%#1: stuff to underline, no extra length
-  \ulp{#1}{0}
+  \ulp{#1}{0}%
   }
   
-  
+\newlength{\fullllength}
+\newcommand{\soutp}[2]{%#1: stuff to underline, #2: extra length to skip the whitespace between to components
+  \settowidth{\LSPTmp}{#1}%
+  % several boxes are need to assure that words with ascending and descending letters are underlined at the same 
+  % level, leading to the impression of a continuous stroke
+  \parbox[t]{\LSPTmp}{%restrict first box to the length of first argument
+      \settowidth{\fullllength}{\parbox{\LSPTmp}{~}\parbox{#2mm}{~}}%inner box is larger than outerbox, so underlining will extend beyond length of outer box
+      %             align parbox to bottom
+      %              |           mbox to prevent hyphenation
+      \sout{\parbox[b]{\fullllength}{\mbox{#1}}}%
+    }%
+}
+
+\newcommand{\soute}[1]{%#1: stuff to underline, no extra length
+  \soutp{#1}{0}%
+  } 
 
 
 \newcommand{\longrule}{\rule{1em}{.3pt}}
@@ -272,8 +287,6 @@
 \newcommand{\twodigitexamples}{\exewidth{(23)}}
 \newcommand{\threedigitexamples}{\exewidth{(234)}}
 \newcommand{\fourdigitexamples}{\exewidth{(2345)}}
-
-\newcommand{\noabstract}{\vspace*{-2\baselineskip}} %for chapters without abstract
 
 \newcommand{\rephrase}[2]{{\color{yellow!30!black}#2}\todo{replaced `#1'}}
 
@@ -336,6 +349,28 @@
     }%
 } 
 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%% Extras for use in (some) edited volumes             %%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+% for chapters without abstract
+\newcommand{\noabstract}{\vspace*{-2\baselineskip}} 
+
+% for papers that have appendices, a replacement for \appendix.
+% Usage: \begin{paperappendix} \section{Title} ... \end{paperappendix
+%        Will result in "Appendix A: Title"
+%
+\newcounter{paperappendixsection}
+\newenvironment{paperappendix}{%
+    \let\oldthesection\thesection%
+    \let\oldsectionformat\sectionformat%
+    \setcounter{paperappendixsection}{0}%
+    \def\thesection{\Alph{paperappendixsection}}%
+    \def\sectionformat{\stepcounter{paperappendixsection}\appendixname\ \thesection:\enskip}%
+    }{%
+    \let\thesection\oldthesection%
+    \let\sectionformat\oldsectionformat}
   
 %%%%%%%%%%%%%%%%%%%%
 %%%%           %%%%%
@@ -385,3 +420,35 @@
 % }
 
 \newcommand{\LSfrac}[1]{{\addfontfeature{Fractions=On}#1}}% Use the fraction glyphs shipped with Libertine. The argument is n/m, where n and m are integers
+
+
+% Provide a raised tie bar for diphthongs and affricates with ascenders
+\newcommand{\hitie}[2]{%
+\mbox{#1}%
+\raisebox{.5mm}{%
+͡%
+}%
+\mbox{#2}%
+}
+
+
+\newcommand{\hitier}[3][.7]{%
+\mbox{#2}%
+\hspace*{#1mm}%
+\raisebox{.5mm}{%
+͡%
+}%
+\hspace*{-#1mm}%
+\mbox{#3}%
+}
+
+
+\newcommand{\hitiel}[3][.7]{%
+\mbox{#2}%
+\hspace*{-#1mm}%
+\raisebox{.5mm}{%
+͡%
+}%
+\hspace*{#1mm}%
+\mbox{#3}%
+}
