Updates from Overleaf

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -1864,10 +1864,12 @@
   pages   = {315-360},
 }
 
-@InProceedings{Jenks2010,
+@article{Jenks2010,
   author        = {Peter Jenks},
   title         = {Evidence for the Syntactic Diversity of Numeral Classifiers},
-  booktitle     = {Proceedings of 84th {A}nnual {M}eeting of the {L}inguistics {S}ociety of {A}merica},
+  journal     = {LSA Annual Meeting Extended Abstracts},
+  volume    = {1},
+  pages = {15:1-5},
   year          = {2010},
   date-added    = {2016-11-11 14:17:02 +0000},
   date-modified = {2016-11-11 14:29:38 +0000},
