--- a/localcommands.tex
+++ b/localcommands.tex
@@ -153,3 +153,5 @@
 \newcommand{\fts}[1]{\footnotesize #1}
 
 \newcommand{\smc}[1]{\textsc{\MakeTextLowercase{#1}}}	
+
+\renewcommand{\checkmark}{\ding{51}}
