--- a/main.tex
+++ b/main.tex
@@ -21,23 +21,21 @@
 \lsCollectionPaperMainmatterMode % Leave the Frontmatter Mode 
 \setcounter{chapter}{0} % Reset the chapter counter so that preceeding prefaces are not counted
 %%
-\mainmatter          
-
-\renewcommand{\checkmark}{\ding{51}}
+\mainmatter
 	
-%  \includepaper{chapters/Schwarz}
-%  \includepaper{chapters/Cisneros}
-%  \includepaper{chapters/Sereikaite}
-%  \includepaper{chapters/Irani}
-%  \includepaper{chapters/Pico}
-%  \includepaper{chapters/LeBruyn}
-%  \includepaper{chapters/Hall} 
-%  \includepaper{chapters/Despic}
-%  \includepaper{chapters/Borik-Espinal}
-%  \includepaper{chapters/Williams} 
-%  \includepaper{chapters/de-Sa}
+ \includepaper{chapters/Schwarz}
+ \includepaper{chapters/Cisneros}
+ \includepaper{chapters/Sereikaite}
+ \includepaper{chapters/Irani}
+ \includepaper{chapters/Pico}
+ \includepaper{chapters/LeBruyn}
+ \includepaper{chapters/Hall} 
+ \includepaper{chapters/Despic}
+ \includepaper{chapters/Borik-Espinal}
+ \includepaper{chapters/Williams} 
+ \includepaper{chapters/de-Sa}
   \includepaper{chapters/Coppock-Strand}
-%  \includepaper{chapters/Etxeberria}
+ \includepaper{chapters/Etxeberria}
 
 \input{backmatter.tex}
 \input{localseealso.tex}
