--- a/localcommands.tex
+++ b/localcommands.tex
@@ -154,4 +154,4 @@
 
 \newcommand{\smc}[1]{\textsc{\MakeTextLowercase{#1}}}	
 
-\renewcommand{\checkmark}{\ding{51}}
+\AtBeginDocument{\renewcommand{\checkmark}{\ding{51}}}
