--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -316,7 +316,7 @@
   editor        = {Stefan Hinterwimmer and Cornelia Ebert},
   number        = {92},
   series        = {Studies in Linguistics and Philosophy},
-  pages         = {75-103},
+  pages         = {75--103},
   address       = {Berlin},
   
 }
@@ -337,7 +337,7 @@
   editor        = {Theresa Biberauer},
   number        = {132},
   series        = {Linguistik Aktuell/Linguistics Today},
-  pages         = {219-245},
+  pages         = {219--245},
   address       = {Amsterdam},
   
 }
