--- a/localmetadata.tex
+++ b/localmetadata.tex
@@ -3,7 +3,7 @@
 \typesetter{Jordi Martínez Martínez}
 %\proofreader{Change proofreaders in localmetadata.tex}
 \author{Ana Aguilar-Guevara\and Julia Pozas Loyo\lastand Violeta Vázquez-Rojas Maldonado}
-\BookDOI{123}
+\BookDOI{10.5281/zenodo.3265959}
 \renewcommand{\lsISBNdigital}{000-0-000000-00-0}
 \renewcommand{\lsISBNhardcover}{000-0-000000-00-0}
 \renewcommand{\lsSeries}{sidl}  
