--- a/localpackages.tex
+++ b/localpackages.tex
@@ -93,5 +93,11 @@
 %\usepackage{ifpdf}
 %\let\clipbox\relax
 
+\usepackage{siunitx}
+\sisetup{output-decimal-marker={.},detect-weight=true, detect-family=true, detect-all, input-symbols={\%}, free-standing-units, input-open-uncertainty= , input-close-uncertainty= ,table-align-text-pre=false,uncertainty-separator={\,},group-digits=false,detect-inline-weight=math}
+\DeclareSIUnit[number-unit-product={}]{\percent}{\%}
+\makeatletter \def\new@fontshape{} \makeatother
+\robustify\bfseries % For detect weight to work
+
 \usepackage{pifont}
 \usepackage{langsci/styles/langsci-gb4e} 
