Coppock ready for Review

--- a/localbibliography.bib
+++ b/localbibliography.bib
@@ -639,10 +639,13 @@
 
 @Article{Coppocktoappear,
   author        = {Elizabeth Coppock},
-  title         = {Quantity Superlatives in {G}ermanic, or, Life on the Fault Line between Adjective and Determiner},
+  title         = {Quantity Superlatives in {G}ermanic, or, ``{L}ife on the Fault Line between Adjective and Determiner''},
   journal       = {Journal of Germanic Linguistics},
-  year          = {to appear},
-  volume        = {(to appear)},
+  year          = {2019},
+  volume        = {31},
+  number        = {2},
+  pages         = {109--200},
+  doi           = {10.1017/S1470542718000089},
   date-added    = {2015-10-28 14:25:05 +0000},
   date-modified = {2017-10-24 16:52:48 +0000},
 }
