--- a/langsci/seriesinfo/sidl-info.tex
+++ b/langsci/seriesinfo/sidl-info.tex
@@ -13,10 +13,11 @@ In this series:
 % \begin{multicols}{2}
 \small
 \begin{enumerate}
-\item Handschuh, Corinna. A typology of marked-S languages.
-\item Rießler, Michael. Adjective attribution.
-\item Klamer, Marian (ed.). The Alor-Pantar languages: History and typology.
-\item Berghäll, Liisa. A grammar of Mauwake (Papua New Guinea).
+\setcounter{enumi}{4}
+% % \item Handschuh, Corinna. A typology of marked-S languages.
+% % \item Rießler, Michael. Adjective attribution.
+% % \item Klamer, Marian (ed.). The Alor-Pantar languages: History and typology.
+% \item Berghäll, Liisa. A grammar of Mauwake (Papua New Guinea).
 \item Wilbur, Joshua. A grammar of Pite Saami.
 \item Dahl, Östen. Grammaticalization in the North: Noun phrase morphosyntax in Scandinavian vernaculars.
 \item Schackow, Diana.    A grammar of Yakkha.
@@ -36,7 +37,8 @@ In this series:
 \item Riesberg, Sonja,  Asako Shiohara \& Atsuko Utsumi (eds.). Perspectives on information structure in Austronesian languages.
 \item Döhler, Christian. A grammar of Komnzo.
 \item Yakpo, Kofi. A Grammar of Pichi.
-\item Guérin Valérie (ed.). Bridging constructions.
+\item Guérin, Valérie (ed.). Bridging constructions.
+\item Ana Aguilar-Guevara, Julia Pozas Loyo \& Violeta Vázquez-Rojas Maldonado (eds.). Definiteness across languages.
 \end{enumerate}
  
 % \item Yakpo 
